# paddleocr-rust-ncnn

./: Cargo.toml  README.md  shell.nix
models/det/: ch_PP-OCRv3_det_infer.param
src/: det.rs  helper.rs  main.rs  rec.rs  rect.rs
