[package]
name = "paddleocr-rust-ncnn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "1.0.72",features = ["backtrace"]}
derivative = "2.2.0"
image = "0.24.6"
imageproc = "0.23.0"
ncnn-rs = {path = '/persist/chez/data/github/rust-ncnn-build/ncnn-rs',features = ["static","vulkan-static-glslang"]}
num-integer = "0.1.45"
num-traits = "0.2.16"
rust-embed = "6.8.1"
visioncortex = "0.8.0"

[profile.release]
#lto = "fat"
#panic = "abort"
